# rasterizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: format.yml  pytest.yml
dev/: benchmark_polygon_threshold.py
docs/: algorithm.rst  api.rst  conf.py  examples.py  generate_benchmark_figures.py  generate_images.py  index.rst  large_dataset_showcase.md  requirements.txt  usage.rst
docs/_static/: large_dataset_showcase.json  polygon_threshold_benchmark.csv
rasterizer/: __init__.py  _misc.py  _numba_engines.py  lines.py  numba_impl.py  polygons.py  rasterizer.py
scripts/: benchmark.py  benchmark_large_polygons.py  generate_large_dataset_showcase.py
src/line_rasterizer/: rasterizer.py
tests/: test_rasterizer.py  test_real_data.py
