[project]
name = "rasterizer"
version = "0.3.1"
description = "A Python package to rasterize GeoDataFrames"
authors = [{ name = "Cyril Joly" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["geopandas", "xarray", "numpy", "shapely", "rioxarray", "numba", "tqdm"]

[project.urls]
Homepage = "https://github.com/CyrilJl/rasterizer"
Documentation = "https://rasterizer.readthedocs.io"

[tool.setuptools]
packages = ["rasterizer"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest", "scipy"]

[tool.pytest.ini_options]
markers = ["slow: long-running benchmark-style tests"]
addopts = "-m 'not slow'"

[tool.ruff]
line-length = 120
